--- a/Style.css
+++ b/Style.css
@@ -7,23 +7,20 @@
     padding: 0;
     text-decoration: none;
     list-style: none;
-    box-sizing: border-box; /* Ajouté pour une mise en page plus prévisible */
+    overflow-x: clip;
 }
 
 body {
     margin: 0;
     width: 100%;
-    font-family: Arial, sans-serif; /* Police par défaut */
-    line-height: 1.6; /* Pour une meilleure lisibilité */
     background-color: #f4f4f4; /* Couleur de fond légère */
-    overflow-x: hidden !important;
 }
 
 header {
+    box-sizing: content-box;
     height: 100px;
     margin-bottom: 10px;
     width: 100vw;
-    display: flex;
     align-items: center;
     justify-content: center;
     color: white;
@@ -64,6 +61,7 @@ input {
 }
 
 .navbar {
+    position: absolute;
     padding: 30px;
     display: flex;
     justify-content: space-between;
@@ -92,7 +90,7 @@ input {
 .navbar .logo {
     font-size: 2em;
     font-weight: bold;
-    height: 50px;
+    height: 50px !important;
 }
 
 .navbar .nav-links ul {
@@ -106,6 +104,9 @@ input {
 .navbar .menu {
     color: #3c3c3c;
     display: none;
+    position: absolute;
+    top: 50px;
+    right: 50px;
     width: 35px;
 }
 
@@ -114,11 +115,6 @@ input {
 }
 
 @media screen and (max-width: 600px) {
-    body {
-        max-width: 100vw !important;
-        overflow-x: hidden !important;
-    }
-
     .navbar {
         padding: 0;
         flex-direction: column; /* Changement pour meilleure disposition mobile */
@@ -126,8 +122,8 @@ input {
     }
 
     .navbar .logo {
-        position: relative;
-        top: 5px;
+        position: absolute;
+        top: 30px;
         left: 30px;
     }
 
